# prueba-Scraping-ruth

./: .devdbrc  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/newsscraper/: __init__.py  __main__.py  browser.py  cli.py  config.py  extraction.py  logging_setup.py  models.py  pipeline.py  ports.py  robots.py  sitemap.py  textutils.py
src/newsscraper/sites/: __init__.py  base.py  elheraldo.py  latribuna.py  registry.py
src/newsscraper/storage/: __init__.py  csv_repo.py  multi.py  sqlite_repo.py
tests/: test_extraction.py  test_pipeline.py  test_robots.py  test_sitemap.py  test_sites.py  test_storage.py  test_textutils.py
